2024-06-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-ast.h (enum pkl_ast_code): Remove `PKL_AST_GCD'.

2024-06-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-ast.c (pkl_struct_type_traverse): s/strtok/strtok_r/.

2024-06-02  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-ast.c (pkl_struct_type_traverse): Exclude unnamed
	fields.

2024-06-02  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-trans.h (struct pkl_trans_payload): Add field `env'.
	(pkl_phase_transl): New extern.
	(pkl_trans_init_payload): Initialize env.
	* libpoke/pkl-trans.c (transl): New phase.
	(PKL_TRANS_ENV): Define.
	(pkl_transl_ps_var): New handler.
	(pkl_transl_pr_comp_stmt): Likewise.
	(pkl_transl_ps_comp_stmt): Likewise.
	(pkl_transl_pr_try_stmt): Likewise.
	(pkl_transl_pr_func): Likewise.
	(pkl_transl_ps_func_arg): Likewise.
	(pkl_transl_ps_decl): Likewise.
	(pkl_transl_pr_struct_type_field): Likewise.
	(pkl_transl_pr_type_struct): Likewise.
	(pkl_transl_ps_type_struct): Likewise.
	* libpoke/pkl-anal.c (pkl_anal1_ps_var): Move checks that require
	lexical depth knowledge to pkl_transl_ps_var.
	* libpoke/pkl.c (rest_of_compilation): Rename passes and add
	transl.
	* libpoke/pkl-gen.c (pkl_gen_ps_var): Emit an ICE if a lexical
	variable in a VAR node is not set.
	* testsuite/poke.pkl/scons-73.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
	* etc/hacking.org (Lexical Handling): New section.
	* HACKING: Regenerate.

2024-06-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-pass.c (pkl_call_node_handlers): Use
	PKL_AST_TYPE_CODE2 instead of PKL_AST_TYPE_CODE.
	(pkl_do_pass_1): Likewise.
	* libpoke/pkl-tab.y: Pass the ast to pkl_env_register.
	(TYPENAME): Add a type alias node instead of the aliased type to
	the AST.
	* libpoke/pkl-typify.c (pkl_typify1_ps_op_typeof): Create a named
	type.
	* libpoke/pkl.c (pkl_defvar): Pass the ast to pkl_env_register.